--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
     "html-webpack-plugin": "^2.28.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "style-loader": "^0.18.2",
     "webpack": "^2.6.1",
     "webpack-dashboard": "^0.4.0",
     "webpack-dev-server": "^2.4.5"
